add functions and events, photos, selectors, styles
Co-Authored-By: Emme Buentiempo <emmettbuentiempo@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,23 @@
   display: block;
 }
 
-#quote {
+/*
+#stewart {
+  display: none;
+}
+
+#busey {
+  display: none;
+}
+
+#foxx {
+  display: none;
+}
+
+#love-scale {
+  display: none;
+}
+
+#hate-scale {
   display: none;
 }
