fix hide/show functions on love-scale/hate-scale elements, add spans and css stylings to output text, resize output photos, fill-in readme
Co-Authored-By: Emme Buentiempo <emmettbuentiempo@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,28 @@
 #foxx {
   display: none;
 }
+
+.text1 {
+  font-weight: bold;
+  text-emphasis: italic;
+  color: gold;
+}
+
+.text2 {
+  color: brown;
+}
+
+.text3 {
+  font-weight: bold;
+  color: darkred;
+}
+
+img {
+  float: center;
+  width: 450px;
+  height: auto;
+}
+
+h2 {
+  text-align: center;
+}
